# CaissePro

./: .env.example  .gitignore  .prettierignore  .prettierrc  Fonctionnalite-module.txt  README.md  deploy.sh  docker-compose.yml  eslint.config.js  migrate-accounting.sql  migrate-fne-role.sql  migrate-fne-tables.sql  migrate-modules.sql  package.json  pnpm-lock.yaml  temp-query.sql  turbo.json
services/ai-service/: Dockerfile  package.json  pyproject.toml  requirements.txt
services/ai-service/app/: config.py  dependencies.py  main.py
services/ai-service/app/models/: anomaly_detector.py  categorizer.py  chatbot_engine.py  client_scorer.py  narrative_generator.py  ocr_engine.py  sales_forecaster.py
services/ai-service/app/prompts/: module_prompts.py
services/ai-service/app/routers/: anomaly.py  categorization.py  chatbot.py  forecast.py  module_chat.py  narrative.py  ocr.py  scoring.py
services/ai-service/app/schemas/: anomaly.py  categorization.py  chatbot.py  forecast.py  narrative.py  ocr.py  scoring.py
services/ai-service/app/services/: anomaly_service.py  categorization_service.py  chatbot_service.py  forecast_service.py  (+3 more)
services/ai-service/tests/: test_anomaly.py  test_categorization.py  test_chatbot.py  test_feature_engineering.py  test_forecast.py  test_narrative.py  test_ocr.py  test_scoring.py
services/report-service/: Dockerfile  package.json  pyproject.toml  requirements.txt  test_output.txt
services/report-service/app/: auth.py  celery_app.py  config.py  database.py  enums.py  main.py  models.py  router.py  schemas.py  tasks.py
services/report-service/tests/: conftest.py  test_api.py  test_auth.py  test_csv_generator.py  test_data_collector.py  test_enums.py  test_excel_generator.py  test_pdf_generator.py  test_report_builders.py  test_schemas.py
(+457 files in other folders)
