[project]
name = "ai-service"
version = "0.1.0"
description = "CaisseFlow Pro AI Service — OCR, categorization, anomaly detection, forecasting"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "pytesseract>=0.3.13",
  "Pillow>=10.4.0",
  "PyMuPDF>=1.24.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "spacy>=3.7.0",
  "joblib>=1.4.0",
]

[project.optional-dependencies]
ml = ["torch>=2.3.0", "transformers>=4.42.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "ruff>=0.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
